--- a/web01/joinForm.html
+++ b/web01/joinForm.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>현대자동차 - 현대닷컴 | 대한민국 대표 자동차회사 hyundai.com</title>
     <meta name="description" content="현대자동차 공식 홈페이지 현대닷컴. 승용, SUV부터 전기차, 수소차까지. 대한민국 최고의 완성차 브랜드를 경험해보세요.">
-    <mata name="keywords" content="현대, 현대차, 현대자동차, hyundai, 승용, SUV, 트럭, 전기차, 친환경차, 수소차, 아반떼, 쏘나타, 소나타, 그랜저, 베뉴, 코나, 투싼, 
+    <meta name="keywords" content="현대, 현대차, 현대자동차, hyundai, 승용, SUV, 트럭, 전기차, 친환경차, 수소차, 아반떼, 쏘나타, 소나타, 그랜저, 베뉴, 코나, 투싼, 
     싼타페, 산타페, 싼타페하이브리드, 팰리세이드, 펠리세이드, 스타리아, 넥쏘, 아이오닉, 아이오닉5, 아이오닉6,포터, 특장차, 벨로스터, 엔라인, NLINE, 캐스퍼, 
     마이현대, 현대샵, myhyundai, hyundaishop, 블루멤버스, 현대디지털키, 현대이벤트, 수리, 정비, 현대정비센터, 현대자동차서비스센터, 현대자동차견적, 현대차사양, 현대차가격, 현대차사양조회">
 
@@ -25,23 +25,28 @@
 <style>
 .hd { width: 100%; height: 50px; position: absolute; top: 0; left: 0; z-index: 999; }
 
+.content { display: block; }
 .vs { clear: both; width: 100%; height: 350px; overflow: hidden; }
 .vs img { display: block; width: 100%; height: auto; }
 .bread { clear: both; width: 100%; height: auto; }
 .bread_fr { width: 1200px; margin: 20px 30px; }
 .home { color: #222; }
-[name=opt].sel { color: #007fa8; }
+.sel { color: #007fa8; }
 .page { clear: both; width: 100%; min-height: 100vh; }
 .page:after { content: ""; display: block; clear: both; }
 .page_wrap { width: 1200px; margin: auto; }
 
-.content { display: block; width: 100%; }
-.join { display: block; clear: both; text-align: center; }
-.fm { display: block; border: 1px solid #007fa8; margin: 50px 300px; padding: 50px; }
-.fm_lst th { display: block; margin: 15px; float: left; }
-.fm_lst td { display: block; float: right; padding: 10px 30px; }
-#id, #pw, #name, #email { clear: both; width: 280px; height: 30px; padding-left: 0.7em; font-size: 16px; }
-.fm_btn { display: block; }
+.join_wrap { width: 550px; height: 600px; padding: 50px; margin: 0 auto; }
+.join_wrap .join_tit { margin-bottom: 20px; }
+.join_wrap #join_form { box-sizing: border-box; }
+.join { border: 1px solid #eee; padding: 60px; position: relative; }
+.join label { margin-right: 20px; line-height: 3; }
+.join input { width: 100%; height: 20px; margin-bottom: 10px; font-size: 14px; }
+.join button { width: 48%; height: 45px; font-weight: 600; cursor: pointer; }
+.join button[type="reset"] { position: absolute; bottom: -40px; left: 0; z-index: 50; background-color: #f6f3f2; }
+.join button[type="submit"] { position: absolute; bottom: -40px; right: 0; z-index: 50; color: #fff; background-color: #3387bd; }
+.join button[type="reset"]:hover { background-color: #e4dcd3; }
+.join button[type="submit"]:hover { background-color: #002c5f; }
 
 .ft { clear: both; width: 100%; height: 200px; background-color: #1c1b1b; padding-bottom: 50px; }
 .ft_wrap { clear: both; width: 1200px; padding: 60px 50px; }
@@ -72,7 +77,6 @@ $(document).ready(function(){
                 <nav class="tnb">
                     <a href="login.html">로그인</a>
                     <a href="join.html">회원가입</a>
-                    <a href="sitemap.html">사이트맵</a>
                 </nav>
                 <nav class="gnb">
                     <ul>
@@ -130,47 +134,37 @@ $(document).ready(function(){
                     <span class="sel">회원가입</span>
                 </div>
             </div>
-            <section class="page">
-                <div class="page_wrap">
-                    <h2 class="page_tit">회원가입</h2>
-                    <div class="join">
-                        <form action="" method="post" name="fm1" id="joinForm">
-                            <table class="fm">
-                                <tbody>
-                                    <tr class="fm_lst">
-                                        <th><label for="id">아이디</label></th>
-                                        <td>
-                                            <input type="text" id="id" name="id" class="info" required>
-                                        </td>
-                                    </tr>
-                                    <tr class="fm_lst">
-                                        <th><label for="id">비밀번호</label></th>
-                                        <td>
-                                            <input type="password" id="pw" name="pw" class="info" required>
-                                        </td>
-                                    </tr>
-                                    <tr class="fm_lst">
-                                        <th><label for="id">이름</label></th>
-                                        <td>
-                                            <input type="text" id="name" name="name" class="info" required>
-                                        </td>
-                                    </tr>
-                                    <tr class="fm_lst">
-                                        <th><label for="id">이메일</label></th>
-                                        <td>
-                                            <input type="email" id="email" name="email" class="info" required>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                            <div class="fm_btn">
-                                <button type="reset" class="join_btn">취소</button>
-                                <button type="submit" class="join_btn">회원가입</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </section>
+            <div class="join_wrap">
+                <h2 class="join_tit">회원가입</h2>
+                <form action="" method="post" id="join_form">
+                    <table class="join">
+                        <tbody>
+                            <tr>
+                                <th><label for="id">아이디</label></th>
+                                <td><input type="text" name="id" required></td>
+                            </tr>
+                            <tr>
+                                <th><label for="pw">비밀번호</label></th>
+                                <td><input type="password" name="pw" required></td>
+                            </tr>
+                            <tr>
+                                <th><label for="name">이름</label></th>
+                                <td><input type="text" name="name" required></td>
+                            </tr>
+                            <tr>
+                                <th><label for="email">이메일</label></th>
+                                <td><input type="email" name="email" required></td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <button type="reset" class="join_btn">취소</button>
+                                    <button type="submit" class="join_btn">회원가입</button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </form>
+            </div>
         </div> 
         <footer class="ft">
             <div class="ft_wrap">
