--- a/web01/company.html
+++ b/web01/company.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="header.css">
 </head>
 <style>
-.hd { width: 100%; height: 50px; position: fixed; }
+.hd { width: 100%; height: 50px; position: absolute; top: 0; left: 0; z-index: 999; }
 
 .vs { clear: both; width: 100%; height: 350px; overflow: hidden; }
 .vs img { display: block; width: 100%; height: auto; }
@@ -33,7 +33,7 @@
 [name=opt].sel { color: #007fa8; }
 .page { clear: both; width: 100%; min-height: 100vh; }
 .page:after { content: ""; display: block; clear: both; }
-.page_wrap { width: 1200px; margin: auto; position: relative; }
+.page_wrap { width: 1200px; margin: auto; }
 
 .content { display: none; }
 .content:target { display: block; }
@@ -46,9 +46,20 @@
 .map_tit { display: block; text-decoration: underline; }
 .map_con { margin: 20px 0 50px 0; color: #999; }
 .map ul { width: 100%; }
-.map ul li { display: block; line-height: 3; letter-spacing: -1px; }
+.map ul li { display: block; line-height: 3; }
 .map_lst { display: block; float: left; width: 120px; font-weight: 600; }
 .map_info { display: block; }
+
+.res { display: block; padding-bottom: 85px; }
+.res_tit { margin: 60px 0; text-align: center; font-size: 30px; }
+.res_con { margin: 0 20px; text-align: right;  font-size: 14px;}
+.tab { width: 100%; margin-top: 30px; box-sizing: border-box; font-size: 14px; line-height: 24px; border-collapse: collapse; }
+.tab > thead { display: table-header-group; }
+.tab > thead > tr { display: table-row; }
+.tab > thead > tr > th { height: 20px; padding:10px 1em; border-bottom:1px solid #e4dcd3; background: #002c5f; color: #fff; border-color: #fff; }
+.tab > tbody { display: table-row-group; }
+.tab > tbody > tr { display: table-row; }
+.tab > tbody > tr > th { height: 20px; padding:10px 1em; border: 1px solid #e4dcd3; }
 
 .ft { clear: both; width: 100%; height: 200px; background-color: #1c1b1b; padding-bottom: 50px; }
 .ft_wrap { clear: both; width: 1200px; padding: 60px 50px; }
@@ -234,7 +245,7 @@ $(document).ready(function(){
                         </div>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3179.719397476953!2d126.81131371562188!3d37.159371155097865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b1245ed12b5cb%3A0x8b7f1ffd1ad7c8f!2z6rK96riw64-EIO2ZlOyEseyLnCDtmITrjIDsl7DqtazshozroZwgMTUw!5e0!3m2!1sko!2skr!4v1666085257255!5m2!1sko!2skr" 
                         width="1200" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                        <div id="map2">
+                        <div id="map3">
                             <h3 class="map_tit">기술연구소</h3>
                             <p class="map_con">울산, 소하리의 연구소를 통합하여 출범한 현대자동차 기술연구소는 첨단 시험장비와 연구동을 갖추고 승용, RV, 상용에 이르는 차량개발에 노력하고 있습니다. 
                             글로벌 베스트 자동차 메이커 수준에 걸맞는 R&D 능력 확보를 위해 디자인 능력의 극대화, 차세대 파워트레인 개발, 동급 최고의 제품개발, 핵심기술의 전략적 개발, 조직 운영 효율화 및 인재육성으로 고객이 만족하는 고성능,고품질, 고부가가치 자동차를 개발하고 있습니다.</p>
@@ -284,7 +295,7 @@ $(document).ready(function(){
                     <div class="res">
                         <h3 class="res_tit">도매판매 현황</h3>
                         <p class="res_con">(단위 : 천대)</p>
-                        <div class="tab">
+                        <table class="tab">
                             <thead>
                                 <tr>
                                     <th></th>
@@ -317,12 +328,12 @@ $(document).ready(function(){
                                     <th>4,589</th>
                                 </tr>
                             </tbody>
-                        </div>
+                        </table>
                     </div>
                     <div class="res">
                         <h3 class="res_tit">손익계산서</h3>
                         <p class="res_con">(단위 : 십억원)</p>
-                        <div class="tab">
+                        <table class="tab">
                             <thead>
                                 <tr>
                                     <th></th>
@@ -376,7 +387,7 @@ $(document).ready(function(){
                                     <th>-63.8%</th>
                                 </tr>
                             </tbody>
-                        </div>
+                        </table>
                     </div>
                 </div>
             </section>
