--- a/web01/service.html
+++ b/web01/service.html
@@ -17,6 +17,7 @@
     <meta property="og:image" content="">
     <meta property="og:image:width" content="">
     <meta property="og:image:height" content="">
+    <link rel="icon" href="./img/logo.ico" sizes="32x32">
 
     <script src="./js/jquery-1.11.1.js"></script>
     <link rel="stylesheet" href="./css/reset2.css">
