web04 add login, join

--- a/web04/naver/contact.html
+++ b/web04/naver/contact.html
@@ -127,25 +127,25 @@
                 <li class="has-submenu">
                     <a href="#">네이버</a>
                     <ul class="submenu menu vertical" data-submenu>
-                        <li><a href="/naver/profile.html">네이버 소개</a></li>
-                        <li><a href="/naver/history1.html">주요 연혁</a></li>
-                        <li><a href="/naver/contact.html">CONTACT</a></li>
+                        <li><a href="./profile.html">네이버 소개</a></li>
+                        <li><a href="./history1.html">주요 연혁</a></li>
+                        <li><a href="./contact.html">CONTACT</a></li>
                     </ul>
                 </li>
                 <li class="has-submenu">
                     <a href="#">가치실현</a>
                     <ul class="submenu menu vertical" data-submenu>
-                        <li><a href="/service/value.html">원칙</a></li>
-                        <li><a href="/service/business.html">정책</a></li>
-                        <li><a href="/service/impact.html">임팩트</a></li>
+                        <li><a href="../service/value.html">원칙</a></li>
+                        <li><a href="../service/business.html">정책</a></li>
+                        <li><a href="../service/impact.html">임팩트</a></li>
                     </ul>
                 </li>
-                <li class="has-submenu"><a href="/news/list.html">홍보</a></li>
+                <li class="has-submenu"><a href="../news/list.html">홍보</a></li>
                 <li class="has-submenu">
                     <a href="#">서비스</a>
                     <ul class="submenu menu vertical" data-submenu>
-                        <li><a href="/board/list.html">공지사항</a></li>
-                        <li><a href="/data/list.html">자료실</a></li>
+                        <li><a href="../board/list.html">공지사항</a></li>
+                        <li><a href="../data/list.html">자료실</a></li>
                         <li><a href="#">질문 및 답변</a></li>
                     </ul>
                 </li>
@@ -175,7 +175,7 @@
 	</div>
 </div>
 <div class="grid-container full">
-	<img src="/resources/upload/images/img_spot_history.jpg" style="width: 100vw;" alt="연혁 소개 이미지">
+	<img src="../resources/upload/images/img_spot_history.jpg" style="width: 100vw;" alt="연혁 소개 이미지">
 </div>
 <div class="grid-x align-center info">
 	<dl class="cell medium-8">
@@ -246,7 +246,7 @@
 	</div>
 	<div title="" style="position: absolute; overflow: hidden; box-sizing: content-box !important; cursor: inherit; 
 	left: 940px; top: 1850px; width: 22px; height: 33px; z-index: 50">
-		<img draggable="false" src="/resources/upload/images/marker-default.png" alt="">
+		<img draggable="false" src="../resources/upload/images/marker-default.png" alt="">
 	</div>
 </div>
 
