--- a/web04/naver/history1.html
+++ b/web04/naver/history1.html
@@ -132,17 +132,17 @@
                 <li class="has-submenu">
                     <a href="#">가치실현</a>
                     <ul class="submenu menu vertical" data-submenu>
-                        <li><a href="../service/value.do">원칙</a></li>
-                        <li><a href="../service/business.do">정책</a></li>
-                        <li><a href="../service/impact.do">임팩트</a></li>
+                        <li><a href="../service/value.html">원칙</a></li>
+                        <li><a href="../service/business.html">정책</a></li>
+                        <li><a href="../service/impact.html">임팩트</a></li>
                     </ul>
                 </li>
-                <li class="has-submenu"><a href="../news/list.do">홍보</a></li>
+                <li class="has-submenu"><a href="../news/list.html">홍보</a></li>
                 <li class="has-submenu">
                     <a href="#">서비스</a>
                     <ul class="submenu menu vertical" data-submenu>
-                        <li><a href="../board/list.do">공지사항</a></li>
-                        <li><a href="../data/list.do">자료실</a></li>
+                        <li><a href="../board/list.html">공지사항</a></li>
+                        <li><a href="../data/list.html">자료실</a></li>
                         <li><a href="#">질문 및 답변</a></li>
                     </ul>
                 </li>
@@ -174,7 +174,7 @@
 	</div>
 </div>
 <div class="grid-container full">
-	<img src="/resources/upload/images/img_spot_history.jpg" style="width: 100vw;" alt="연혁 소개 이미지">
+	<img src="../resources/upload/images/img_spot_history.jpg" style="width: 100vw;" alt="연혁 소개 이미지">
 </div>
 <div class="grid-x align-center info">
 	<dl class="cell medium-8">
