--- a/web04/service/business.html
+++ b/web04/service/business.html
@@ -124,25 +124,25 @@
                 <li class="has-submenu">
                     <a href="#">네이버</a>
                     <ul class="submenu menu vertical" data-submenu>
-                        <li><a href="/naver/profile.html">네이버 소개</a></li>
-                        <li><a href="/naver/history1.html">주요 연혁</a></li>
-                        <li><a href="/naver/contact.html">CONTACT</a></li>
+                        <li><a href="../naver/profile.html">네이버 소개</a></li>
+                        <li><a href="../naver/history1.html">주요 연혁</a></li>
+                        <li><a href="../naver/contact.html">CONTACT</a></li>
                     </ul>
                 </li>
                 <li class="has-submenu">
                     <a href="#">가치실현</a>
                     <ul class="submenu menu vertical" data-submenu>
-                        <li><a href="/service/value.html">원칙</a></li>
-                        <li><a href="/service/business.html">정책</a></li>
-                        <li><a href="/service/impact.html">임팩트</a></li>
+                        <li><a href="./value.html">원칙</a></li>
+                        <li><a href="./business.html">정책</a></li>
+                        <li><a href="./impact.html">임팩트</a></li>
                     </ul>
                 </li>
-                <li class="has-submenu"><a href="/news/list.html">홍보</a></li>
+                <li class="has-submenu"><a href="../news/list.html">홍보</a></li>
                 <li class="has-submenu">
                     <a href="#">서비스</a>
                     <ul class="submenu menu vertical" data-submenu>
-                        <li><a href="/board/list.html">공지사항</a></li>
-                        <li><a href="/data/list.html">자료실</a></li>
+                        <li><a href="../board/list.html">공지사항</a></li>
+                        <li><a href="../data/list.html">자료실</a></li>
                         <li><a href="#">질문 및 답변</a></li>
                     </ul>
                 </li>
@@ -185,37 +185,37 @@
 					<tr class="content_box_button">
 						<td colspan="3" class="btn_text">
                             <span>부패방지 경영 방침</span>
-							<a href="/resources/upload/corp/Anti_Corruption_Policy_KOR.pdf" class="btn_link down" target="_blank">
-                                <div class="circle"><img src="/resources/upload/images/download.png" style="width: 20px;" alt="다운로드"></div>
+							<a href="../resources/upload/corp/Anti_Corruption_Policy_KOR.pdf" class="btn_link down" target="_blank">
+                                <div class="circle"><img src="../resources/upload/images/download.png" style="width: 20px;" alt="다운로드"></div>
 							</a>
                             <span>인테그리티 코드</span>
-							<a href="/resources/upload/corp/kNockIntegrityCode_KOR.pdf" class="btn_link down" target="_blank">
-								<div class="circle"><img src="/resources/upload/images/download.png" style="width: 20px;" alt="다운로드"></div>
+							<a href="../resources/upload/corp/kNockIntegrityCode_KOR.pdf" class="btn_link down" target="_blank">
+								<div class="circle"><img src="../resources/upload/images/download.png" style="width: 20px;" alt="다운로드"></div>
 							</a>
                             <span>공정거래 자율준수편람</span>
-							<a href="/resources/upload/corp/Compliance_Policy_KOR.pdf" class="btn_link down" target="_blank">
-								<div class="circle"><img src="/resources/upload/images/download.png" style="width: 20px;" alt="다운로드"></div>
+							<a href="../resources/upload/corp/Compliance_Policy_KOR.pdf" class="btn_link down" target="_blank">
+								<div class="circle"><img src="../resources/upload/images/download.png" style="width: 20px;" alt="다운로드"></div>
 							</a>
 						</td>
 					</tr>
 					<tr>
-						<th><img src="/resources/upload/images/img_value_employees.png" alt="기업윤리규범 임직원 이미지"></th>
+						<th><img src="../resources/upload/images/img_value_employees.png" alt="기업윤리규범 임직원 이미지"></th>
 						<td>임직원<br>다양성을 인정하고 서로 존중하며, 임직원의 능력이 최대한 발휘되도록 책임을 다하는 기업문화와 최상의 근무 환경을 조성합니다. 모든 임직원을 능력과 성과에 따라 합리적으로 대우하며, 차별 없이 평등하게 일할 수 있는 기회를 제공합니다.</td>
 					</tr>
 					<tr>
-						<th><img src="/resources/upload/images/img_value_partner.png" alt="기업윤리규범 파트너 이미지"></th>
+						<th><img src="../resources/upload/images/img_value_partner.png" alt="기업윤리규범 파트너 이미지"></th>
 						<td>파트너ㆍ경쟁사<br>파트너사와의 모든 거래에 대하여 합리적인 거래조건을 보장하며 장기적 관점에서 상생적인 인터넷 생태계를 함께 조성해 나갑니다. 경쟁사와는 상호 존중하며 공정한 거래질서를 유지하고, 선의의 경쟁을 통해 고객의 후생을 높일 수 있는 방향으로 함께 발전해 나갑니다.</td>
 					</tr>
 					<tr>
-						<th><img src="/resources/upload/images/img_value_social.png" alt="기업윤리규범 사회 이미지"></th>
+						<th><img src="../resources/upload/images/img_value_social.png" alt="기업윤리규범 사회 이미지"></th>
 						<td>사회<br>기업시민으로서 지역사회의 법규 및 사회적 가치관을 존중하며 다양한 사회공헌 활동 등을 통해 사회적 책임을 다합니다. 회사의 이익과 사회적 가치가 상충될 때는 사회적 가치를 우선적으로 고려합니다.</td>
 					</tr>
 					<tr>
-						<th><img src="/resources/upload/images/img_value_consumer.png" alt="기업윤리규범 고객 이미지"></th>
+						<th><img src="../resources/upload/images/img_value_consumer.png" alt="기업윤리규범 고객 이미지"></th>
 						<td>고객<br>고객이 원하는 가치를 경영활동의 최우선 판단 기준으로 여기며, 고객에게 도움이 되는 가치를 끊임없이 만듭니다. 고객에게 정직함으로써 신뢰를 받을 수 있도록 노력하고 고객의 의견에 항상 귀 기울입니다.</td>
 					</tr>
 					<tr>
-						<th><img src="/resources/upload/images/img_value_stock.png" alt="기업윤리규범 주주 이미지"></th>
+						<th><img src="../resources/upload/images/img_value_stock.png" alt="기업윤리규범 주주 이미지"></th>
 						<td>주주<br>건실한 경영활동을 통해 정당하고 안정적인 이익을 실현함으로써 주주의 가치를 만듭니다. 주주와의 신뢰를 유지하기 위하여 투명성을 제고하고 각종 경영정보를 제 때에 제공합니다.</td>
 					</tr>
 				</tbody>
