--- a/web04/service/value.html
+++ b/web04/service/value.html
@@ -124,25 +124,25 @@
                 <li class="has-submenu">
                     <a href="#">네이버</a>
                     <ul class="submenu menu vertical" data-submenu>
-                        <li><a href="/naver/profile.html">네이버 소개</a></li>
-                        <li><a href="/naver/history1.html">주요 연혁</a></li>
-                        <li><a href="/naver/contact.html">CONTACT</a></li>
+                        <li><a href="../naver/profile.html">네이버 소개</a></li>
+                        <li><a href="../naver/history1.html">주요 연혁</a></li>
+                        <li><a href="../naver/contact.html">CONTACT</a></li>
                     </ul>
                 </li>
                 <li class="has-submenu">
                     <a href="#">가치실현</a>
                     <ul class="submenu menu vertical" data-submenu>
-                        <li><a href="/service/value.html">원칙</a></li>
-                        <li><a href="/service/business.html">정책</a></li>
-                        <li><a href="/service/impact.html">임팩트</a></li>
+                        <li><a href="./value.html">원칙</a></li>
+                        <li><a href="./business.html">정책</a></li>
+                        <li><a href="./impact.html">임팩트</a></li>
                     </ul>
                 </li>
-                <li class="has-submenu"><a href="/news/list.html">홍보</a></li>
+                <li class="has-submenu"><a href="../news/list.html">홍보</a></li>
                 <li class="has-submenu">
                     <a href="#">서비스</a>
                     <ul class="submenu menu vertical" data-submenu>
-                        <li><a href="/board/list.html">공지사항</a></li>
-                        <li><a href="/data/list.html">자료실</a></li>
+                        <li><a href="../board/list.html">공지사항</a></li>
+                        <li><a href="../data/list.html">자료실</a></li>
                         <li><a href="#">질문 및 답변</a></li>
                     </ul>
                 </li>
@@ -174,7 +174,7 @@
 	</div>
 </div>
 <div class="grid-container full">
-	<img src="/resources/upload/images/img_flower.jpg" style="width: 100vw;" alt="연혁 소개 이미지">
+	<img src="../resources/upload/images/img_flower.jpg" style="width: 100vw;" alt="연혁 소개 이미지">
 </div>
 <div class="grid-x align-center info">
 	<dl class="cell medium-8">
@@ -185,8 +185,8 @@
 		네이버의 기술과 플랫폼은 프로젝트 꽃을 실현하는 토양입니다. AI 인공지능, 음성인식 · 합성 등 어렵게만 여겨지는 첨단 기술을 일상생활 속에서 쉽게 활용하고, 이를 통해 더 많은 개인이 성장해 더 넓은 세상에서 기회를 만들 수 있도록 돕는 것. 이것이 네이버가 기술 플랫폼이 되고자 하는 이유이고, 프로젝트 꽃의 바람입니다.
 		</dd>
 		<div class="val-image">
-			<img src="/resources/upload/images/img_value_flower_info.png" style="width: 100vw;" alt="프로젝트 설명 이미지">
-			<img src="/resources/upload/images/img_value_flower_info.gif" style="width: 100vw;" alt="프로젝트 과정 이미지" class="gif">
+			<img src="../resources/upload/images/img_value_flower_info.png" style="width: 100vw;" alt="프로젝트 설명 이미지">
+			<img src="../resources/upload/images/img_value_flower_info.gif" style="width: 100vw;" alt="프로젝트 과정 이미지" class="gif">
 		</div>
 	</dl>
 </div>
