--- a/web04/board/insert.html
+++ b/web04/board/insert.html
@@ -124,25 +124,25 @@
                 <li class="has-submenu">
                     <a href="#">네이버</a>
                     <ul class="submenu menu vertical" data-submenu>
-                        <li><a href="/naver/profile.html">네이버 소개</a></li>
-                        <li><a href="/naver/history1.html">주요 연혁</a></li>
-                        <li><a href="/naver/contact.html">CONTACT</a></li>
+                        <li><a href="../naver/profile.html">네이버 소개</a></li>
+                        <li><a href="../naver/history1.html">주요 연혁</a></li>
+                        <li><a href="../naver/contact.html">CONTACT</a></li>
                     </ul>
                 </li>
                 <li class="has-submenu">
                     <a href="#">가치실현</a>
                     <ul class="submenu menu vertical" data-submenu>
-                        <li><a href="/service/value.html">원칙</a></li>
-                        <li><a href="/service/business.html">정책</a></li>
-                        <li><a href="/service/impact.html">임팩트</a></li>
+                        <li><a href="../service/value.html">원칙</a></li>
+                        <li><a href="../service/business.html">정책</a></li>
+                        <li><a href="../service/impact.html">임팩트</a></li>
                     </ul>
                 </li>
-                <li class="has-submenu"><a href="/news/list.html">홍보</a></li>
+                <li class="has-submenu"><a href="../news/list.html">홍보</a></li>
                 <li class="has-submenu">
                     <a href="#">서비스</a>
                     <ul class="submenu menu vertical" data-submenu>
-                        <li><a href="/board/list.html">공지사항</a></li>
-                        <li><a href="/data/list.html">자료실</a></li>
+                        <li><a href="./list.html">공지사항</a></li>
+                        <li><a href="../data/list.html">자료실</a></li>
                         <li><a href="#">질문 및 답변</a></li>
                     </ul>
                 </li>
@@ -184,9 +184,9 @@
 			</tbody>
 		</table>
 		<button class="button-group">
-			<a href="/board/list.html" class="button">목록</a>
+			<a href="./list.html" class="button">목록</a>
 			<!--<input type="submit" class="submit button" value="등록" />-->
-            <a href="/board/list.html" class="submit button">등록</a>
+            <a href="./list.html" class="submit button">등록</a>
 		</button>
 	</form>
 </div>
