--- a/web04/index.html
+++ b/web04/index.html
@@ -239,7 +239,8 @@
                                 <input type="password" name="userpw" id="userpw"  class="single100" placeholder="비밀번호 입력" required>
                                 <!--  pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"  -->
                             </label>
-                            <button type="submit" class="button">로그인</button>
+                            <a href="./member/login.html" class="button">로그인</a>
+                            <!--<button type="submit" class="button">로그인</button>-->
                             <a href="./member/agree.html" class="button" style="float:right;">회원가입</a>                    
                         </div>
                     </div>
