--- a/web04/index.html
+++ b/web04/index.html
@@ -153,7 +153,7 @@
                     <ul class="submenu menu vertical" data-submenu>
                         <li><a href="./board/list.html">공지사항</a></li>
                         <li><a href="./data/list.html">자료실</a></li>
-                        <li><a href="#">질문 및 답변</a></li>
+                        <li><a href="./qna/list.html">질문 및 답변</a></li>
                     </ul>
                 </li>
                 <li class="has-submenu"><a href="https://recruit.navercorp.com/">채용</a></li>
