--- a/web04/data/insert.html
+++ b/web04/data/insert.html
@@ -19,7 +19,7 @@
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/js/foundation.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/motion-ui/1.2.3/motion-ui.min.js"></script>
-    <script type="text/javascript" src="/resources/ckeditor/ckeditor.js"></script>
+    <script type="text/javascript" src="../resources/ckeditor/ckeditor.js"></script>
     <script>
     $(document).ready(function(){
         $(document).foundation();
@@ -154,7 +154,7 @@
                     <ul class="submenu menu vertical" data-submenu>
                         <li><a href="../board/list.html">공지사항</a></li>
                         <li><a href="./list.html">자료실</a></li>
-                        <li><a href="#">질문 및 답변</a></li>
+                        <li><a href="../qna/list.html">질문 및 답변</a></li>
                     </ul>
                 </li>
                 <li class="has-submenu"><a href="https://recruit.navercorp.com/">채용</a></li>
