modify web04 menu

--- a/web04/board/updatedoseq1.html
+++ b/web04/board/updatedoseq1.html
@@ -180,7 +180,7 @@
 <div class="row column text-center">
 	<h2>공지사항수정</h2>
 	<hr>
-	<form action="/board/update.do" method="post">
+	<form action="./list.html" method="post">
 		<table>
 			<tbody>
 				<tr>
