--- a/web04/data/detaildodno1.html
+++ b/web04/data/detaildodno1.html
@@ -194,7 +194,7 @@
 			<tr>
                 <th>Content</th>
 		        <td>
-                    <p><img alt="" src="/resources/uploadckImg/d1ca9adf-0669-4b1a-b86e-61eaeddc756d_fes1-1.png" style="height:364px; width:546px" /></p>
+                    <p><img alt="" src="../resources/uploadckImg/d1ca9adf-0669-4b1a-b86e-61eaeddc756d_fes1-1.png" style="height:364px; width:546px" /></p>
                     <p>게시판 샘플1</p>
                 </td>
 			</tr>
@@ -213,11 +213,11 @@
 	  </tbody>
 	</table>
 	<button class="button-group">
-		<a href="/data/list.do" class="button">목록</a>
+		<a href="./list.html" class="button">목록</a>
 		<!--<a href="/data/delete.do?dno=1" class="button">삭제</a>		
 		<a href="/data/update.do?dno=1" class="button">수정</a>-->
-        <a href="/data/list.html" class="button">삭제</a>
-        <a href="/data/updatedodno1.html" class="button">수정</a>
+        <a href="./list.html" class="button">삭제</a>
+        <a href="./updatedodno1.html" class="button">수정</a>
 	</button>
 </div>
 </div>
