--- a/web04/data/insert.html
+++ b/web04/data/insert.html
@@ -200,9 +200,9 @@
 			</tbody>
 		</table>
 		<button class="button-group">
-			<a href="/data/list.html" class="button">목록</a>
+			<a href="./list.html" class="button">목록</a>
 			<!--<input type="submit" class="submit button" value="등록" />-->
-            <a href="/data/list.html" class="submit button">등록</a>
+            <a href="./list.html" class="submit button">등록</a>
 		</button>
 	</form>
 </div>
