--- a/web04/data/list.html
+++ b/web04/data/list.html
@@ -193,14 +193,14 @@
 	  	
 	    <tr>
 	      <td>1</td>
-	      <td><a href="/data/detaildodno1.html">게시판 샘플1</a></td>
+	      <td><a href="./detaildodno1.html">게시판 샘플1</a></td>
 	      <td>2022-12-01 18:03:34.0</td>
 	      <td>23</td>
 	    </tr>
 	    
 	    <tr>
 	      <td>2</td>
-	      <td><a href="/data/detaildodno1.html">게시판 샘플2</a></td>
+	      <td><a href="./detaildodno1.html">게시판 샘플2</a></td>
 	      <td>2022-12-01 18:05:25.0</td>
 	      <td>7</td>
 	    </tr>
@@ -208,7 +208,7 @@
 	  </tbody>
 	</table>
 	<button class="button-group">
-		<a href="/data/insert.html" class="button">작성</a>
+		<a href="./insert.html" class="button">작성</a>
 	</button>
 </div>
 </div>
