--- a/web04/data/updatedodno1.html
+++ b/web04/data/updatedodno1.html
@@ -195,7 +195,7 @@
 					<th>내용</th>
 					<td>
 						<textarea cols="100" rows="10" name="dcontent" id="dcontent" placeholder="내용을 입력하십시오." style="resize: none;" maxlength="900" required>
-                            <p><img alt="" src="/resources/uploadckImg/1bb0eb91-7e1c-47c1-96d4-a789de80ad06_fes1-3.png" style="height:364px; width:546px" /></p>
+                            <p><img alt="" src="../resources/uploadckImg/1bb0eb91-7e1c-47c1-96d4-a789de80ad06_fes1-3.png" style="height:364px; width:546px" /></p>
                             <p>게시판 샘플1</p>
                         </textarea>
 						<script>
@@ -206,9 +206,9 @@
 			</tbody>
 		</table>
 		<button class="button-group">
-			<a href="/data/list.html" class="button">목록</a>
+			<a href="./list.html" class="button">목록</a>
 			<!--<input type="submit" class="submit button" value="등록" />-->
-            <a href="/data/list.html" class="submit button">등록</a>
+            <a href="./list.html" class="submit button">등록</a>
 		</button>
 	</form>
 </div>
