--- a/web04/naver/contact.html
+++ b/web04/naver/contact.html
@@ -184,9 +184,6 @@
 		<h2><strong>CONTACT</strong></h2><br>
 	</div>
 </div>
-<div class="grid-container full">
-	<img src="../resources/upload/images/img_spot_history.jpg" style="width: 100vw;" alt="연혁 소개 이미지">
-</div>
 <div class="grid-x align-center info">
 	<dl class="cell medium-8">
 		<h4 class="large-3 columns">네이버 본사</h4>
@@ -254,6 +251,7 @@
 		});    
 		</script>
 	</div>
+    <div><img src="../resources/upload/images/img_map.png" alt="지도 임시 이미지"></div>
 	<div title="" style="position: absolute; overflow: hidden; box-sizing: content-box !important; cursor: inherit; 
 	left: 940px; top: 1850px; width: 22px; height: 33px; z-index: 50">
 		<img draggable="false" src="../resources/upload/images/marker-default.png" alt="">
