--- a/web04/board/detaildoseq1.html
+++ b/web04/board/detaildoseq1.html
@@ -209,11 +209,11 @@
 	  </tbody>
 	</table>
 	<button class="button-group">
-		<a href="/board/list.thml" class="button">목록</a>
+		<a href="./list.thml" class="button">목록</a>
 		<!--<a href="/board/delete.do?seq=1" class="button">삭제</a>		
 		<a href="/board/update.do?seq=1" class="button">수정</a>-->
-        <a href="/board/list.thml" class="button">삭제</a>
-        <a href="/board/updatedoseq1.html" class="button">수정</a>
+        <a href="./list.thml" class="button">삭제</a>
+        <a href="./updatedoseq1.html" class="button">수정</a>
 	</button>
 </div>
 
