modify web04 menu

--- a/web04/service/business.html
+++ b/web04/service/business.html
@@ -184,7 +184,7 @@
 	</div>
 </div>
 <div class="grid-container full">
-	<img src="/resources/upload/images/img_value_spot1.jpg" style="width: 100vw;" alt="기업윤리규범 이미지">
+	<img src="../resources/upload/images/img_value_spot1.jpg" style="width: 100vw;" alt="기업윤리규범 이미지">
 </div>
 <div class="grid-x align-center info">
 	<dl class="cell medium-8">	
