modify web04 validator

--- a/web04/naver/profile.html
+++ b/web04/naver/profile.html
@@ -183,19 +183,21 @@
 	</div>
 </div>
 <div class="grid-container full">
-	<img src="../resources/upload/images/img_spot_summary_v2.jpg" style="width: 100vw;">
+	<img src="../resources/upload/images/img_spot_summary_v2.jpg" style="width: 100vw;" alt="naver_profile">
 </div>
 <div class="grid-x align-center info">
+    <h4 class="large-3 columns">NAVER</h4>
 	<dl class="cell medium-8">
-		<h4 class="large-3 columns">NAVER</h4>
+        <dt></dt>
 		<dd class="large-9 columns">
 			<p class="content-text">
 			네이버(주)는 글로벌 ICT 기업으로서 한국 최대 검색포털 네이버를 서비스하고 있고, 그 계열사에서 모바일 메신저 라인, 동영상 카메라 스노우, 디지털 만화 서비스 네이버웹툰, 메타버스 서비스 제페토 등을 서비스하고 있습니다. 또한, 네이버(주)는 인공지능, 로보틱스, 모빌리티 등 미래 기술에 대한 지속적인 연구개발을 통해 기술 플랫폼의 변화와 혁신을 추구하며 세계 각국의 수많은 이용자와 다양한 파트너들이 함께 성장할 수 있도록 노력하고 있습니다.
 			</p>
 		</dd>
 	</dl>
+    <h4 class="large-3 columns">COMPANY<br>PROFILE</h4>
 	<dl class="cell medium-8">
-		<h4 class="large-3 columns">COMPANY<br>PROFILE</h4>
+        <dt></dt>
 		<dd class="large-9 columns">
 			<table>
 				<tbody>
