--- a/web04/naver/contact.html
+++ b/web04/naver/contact.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation-prototype.min.css">
     <link href='https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css' rel='stylesheet' type='text/css'>
     <link rel="shortcut icon" type="image/x-icon" href="https://www.navercorp.com/img/ko/favicon.ico">
+    <link rel="stylesheet" href="../resources/upload/css/common.css">
+    <link rel="stylesheet" href="../resources/upload/css/main.css">
 
     <!-- script -->
     <script src="https://code.jquery.com/jquery-latest.js"></script>
@@ -38,94 +40,6 @@
             a.appendChild(r);
         })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
     </script>
-    <style>
-    /* initial */
-    ul { list-style:none; }
-    div.row h2 { padding-top: 20px; }
-
-    /* header */
-    .menu>li>a { display: block; line-height: 20px; }
-    .menu-text .logo { font-size: 26px; font-weight: 800; color: #4bd16a; }
-    .top-bar, .top-bar ul { background-color: #fff; }
-    .has-submenu { padding-top: 10px; padding-left: 50px; }
-    .has-submenu a { color: #222; font-weight: 600; }
-    .is-submenu-item { clear: both; background-color: #4bd16a; }
-    .is-submenu-item:hover { background-color: #1ec545; text-decoration: underline; }
-    .is-submenu-item a { color: #fff; font-size: 14px; }
-    .dropdown { width:100%; }
-    .dropdown.menu>li.is-dropdown-submenu-parent>a::after { border-color: #1ec545 transparent transparent; }
-    .large-7.columns a { color: #878890; }
-
-    /* breadcrumb */
-    .breadcrumbs { margin-left: 40px; }
-    .breadcrumbs li { font-size: 14px; font-weight: 600; letter-spacing: -1px; }
-    .breadcrumbs li a { color: #878890; }
-    .breadcrumbs li:not(:last-child)::after { position: relative; margin: 0 0.75rem; opacity: 1; 
-    content: ">"; color: #aaa; }
-
-    /* slide */
-    .orbit { display: block; box-sizing: inherit; }
-    .orbit-container { height: 100%; }
-    .orbit-slide { box-sizing: inherit; position: relative; }
-    .orbit-slide img { width: 100vw; }
-    .slide_text_box { display: block; width: 100%; }
-    .slide_title { position: absolute; top: 50%; left: 10%; font-size: 40px; 
-    letter-spacing: -1px; color: #fff; }
-    .slide_title:after { content: ""; clear: both; display: block; }
-    .slide_text { position: absolute; top: 75%; left: 10%; font-size: 16px; 
-    letter-spacing: -1px; color: #fff; }
-    .slide_text:after { content: ""; clear: both; display: block; }
-
-    /* index */
-    .callout.secondary { border: none; background-color: #f8f9fa; color: #878890; }
-    .callout { margin-top: 50px; border: none; border-right: 1px solid #eee; }
-    .callout:first-child { font-size: 14px; font-weight: 600; }
-    .large-7 .logo { padding-bottom: 7px; padding-right: 10px; }
-    .lead { display: block; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; }
-    .subheader { text-overflow: ellipsis; overflow: hidden; white-space: nowrap; }
-    .cell-id { font-size: 20px; }
-
-    /* agree */
-    .agree { width: 1000px; white-space:pre-wrap; margin: 10px auto; padding: 24px; border:1px solid #eee; 
-    height:600px; overflow-y:auto; }
-    .form-check { text-align: left; padding-left: 100px; }
-    .form-idCk p { text-align: left; margin-bottom: 0; font-size: 14px; }
-    .container form p { text-align: left; font-size: 12px; }
-
-    /* naver */
-    .info { margin: 70px auto; }
-    .info h2, .info h5 { letter-spacing: -1px; }
-    .info a { width: 50%; }
-    .info dl h4 { font-weight: 600; }
-    .info .medium-8 { padding-bottom: 3rem; }
-    .large-9 table { border: none; border-top: 2px solid #222; }
-    .large-9 th{ text-align: left; }
-    #his-sub-checked strong { color: #333; font-weight: 600; border-bottom: 3px solid #00c73c; }
-    .info .his-sub-title { color: #bac2cd; cursor: pointer; }
-    .info .his-sub-title strong:hover { color: #333; font-weight: 600; border-bottom: 3px solid #00c73c; }
-    #his-table table { border-top: none; }
-    #his-table th, #his-table td { background-color: #fff; }
-    #his-year { font-size: 22px; }
-    #his-month { width: 100px; text-align: right; }
-
-    /* service */
-    #val-content { margin: 60px 0; padding-right: 40px; color: #606167; font-size: 16px; line-height: 1.8; letter-spacing: -1px; }
-    .val-image { position: relative; width: 100%; }
-    .gif { position: absolute; top: 450px; left:0; }
-    .large-9 th { width: 100px; }
-    .content_box_button { border-bottom: 1px solid #222; }
-    .btn_text { padding: 1.5rem; text-align: right; font-size: 14px; }
-    .btn_text span { font-weight: 600; letter-spacing: -1px; }
-    .btn_text a { margin-right: 20px; }
-    .circle { display: inline-block; width: 40px; height: 40px; background-color: #ddd; border-radius: 50%; padding-top: 6px; padding-right: 10px; text-align: right; }
-    .circle:after { content: ""; clear: both; white-space: nowrap; }
-    .circle:hover { background-color: #00c73c; }
-
-    /* news */
-
-    /* board */
-
-    </style>
 </head>
 <body>
 <!-- header -->
@@ -206,12 +120,10 @@
 	</dl>
 </div>
 <div class="grid-container full">
-	<!-- <img src="https://www.navercorp.com/img/ko/naver/img_map.png" style="width: 100vw;" alt="지도 이미지"> -->
-	<div style="clear:both; margin-bottom:20px; padding-bottom:20px; ">
+	<img src="https://www.navercorp.com/img/ko/naver/img_map.png" style="width: 100vw;" alt="지도 이미지">
+	<!--<div style="clear:both; margin-bottom:20px; padding-bottom:20px; ">
 		<div id="map" style="margin-top:50px; height:600px; background:white; "></div>
-		<script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-		<!-- https://developers.kakao.com/ 회원가입 후 -> 내 애플리케이션 -> 애플리케이션 추가 -> 추가된 해당 앱을 클릭하면 발급받은  API키를 확인할 수 있음  -->
-		<!-- * 카카오맵 - 지도퍼가기 -->		
+		<script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>		
 		<script type="text/javascript" src="http://dapi.kakao.com/v2/maps/sdk.js?appkey=발급받은API키&​libraries=services"></script>
 		<script>
 		var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
@@ -255,7 +167,8 @@
 	<div title="" style="position: absolute; overflow: hidden; box-sizing: content-box !important; cursor: inherit; 
 	left: 940px; top: 1850px; width: 22px; height: 33px; z-index: 50">
 		<img draggable="false" src="../resources/upload/images/marker-default.png" alt="">
-	</div>
+	</div>-->
+    <!-- https://developers.kakao.com/ 회원가입 후 -> 내 애플리케이션 -> 애플리케이션 추가 -> 추가된 해당 앱을 클릭하면 발급받은  API키를 확인할 수 있음  -->
 </div>
 
 <!-- footer -->
